Fixed css on mobile

--- a/src/app/pages/page.css
+++ b/src/app/pages/page.css
@@ -1,42 +1,50 @@
 h2 {
-    font-family: 'Dancing Script', cursive;
-    font-size: 2em;
-    text-align: center;
-    padding-top: 20px;
+  font-family: "Dancing Script", cursive;
+  font-size: 2em;
+  text-align: center;
+  padding-top: 20px;
 }
 
 img {
-    width: 75%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  width: 75%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container {
-    padding-left: 200px;
-    padding-right: 200px;
-    height: 100%;
+  height: 100%;
 }
 
-p, li, h3 {
-    font-family: 'Nunito', sans-serif;
+@media (min-width: 767px) {
+  .container {
+    padding-left: 200px;
+    padding-right: 200px;
+  }
+}
+
+p,
+li,
+h3 {
+  font-family: "Nunito", sans-serif;
 }
 
 p {
-    padding-top: 10px;
-    text-align: justify;
+  padding-top: 10px;
+  text-align: justify;
 }
 
-p, li {
-    font-size: 1em;
+p,
+li {
+  font-size: 1em;
 }
 
 h3 {
-    font-weight: 600;
-    font-size: 1em;
-    text-align: center;
+  font-weight: 600;
+  font-size: 1em;
+  text-align: center;
 }
 
 .center {
-    text-align: center;
+  text-align: center;
 }
